# ansible-role-tripleo-glance

./: .gitreview  README.md  ansible.cfg  setup.cfg
meta/: main.yml
